# impact-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs  prelude.rs  test.rs
tests/: impact.rs
