[package]
name = "impact-rs"
version = "0.0.15"
edition = "2021"
license = "MIT"
description = "Collision query library for 2D games"
repository = "https://github.com/piot/impact-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed32 = "0.0.14"
fixed32-math = "0.0.15"
